# selenium-rwa

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/.workflows/: test.yml
.github/workflows/: test.yml
assets/: e2e.css
factory/: transaction_factory.py  user_factory.py
helpers/: api_request.py
pages/: bank_account.py  base_page.py  home_page.py  notification_page.py  signin_page.py  signup_page.py  transaction_page.py
tests/: conftest.py  test_bank_account.py  test_notification.py  test_signup.py  test_transaction.py
tests/e2e/: e2e-report.html  test_bank_account.py  test_base.py  test_dummy.py  test_filter.py  test_notification.py  test_signup.py  test_transaction.py
tests/e2e/assets/: style.css
tests/e2e/helpers/: api_request.py
tests/e2e/pages/: bank_account.py  base_page.py  home_page.py  new_transaction_page.py  notification_page.py  signin_page.py  signup_page.py  transaction_page.py
tests/factory/: bank_account.py  user_factory.py
