[tool.poetry]
name = "selenium-rwa"
version = "0.1.0"
description = ""
authors = ["Leandro Machado <l.fvm23@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_rwa"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pytest-html = "^3.2.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"
requests = "^2.31.0"
black = "^23.3.0"
unimport = "^0.16.0"
isort = "^5.12.0"
pytest-repeat = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
